force-app/main/default/objects/TW1_Step__c/fields/TW1_Email_do_Prof_de_Seguran_a_Resp__c.field-meta.xml
<CustomField>
    <fullName>TW1_Email_do_Prof_de_Seguran_a_Resp__c</fullName>
    <label>Email do Prof. de Segurança Resp.</label>
    <type>Email</type>
</CustomField>