force-app/main/default/objects/TW1_Step__c/fields/TW1_Empresa_Possui_SESMT__c.field-meta.xml
<CustomField>
    <fullName>TW1_Empresa_Possui_SESMT__c</fullName>
    <label>Empresa Possui SESMT?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>