force-app/main/default/objects/TW1_Step__c/fields/TW1_End_Date__c.field-meta.xml
<CustomField>
    <fullName>TW1_End_Date__c</fullName>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>