force-app/main/default/objects/TW1_Step__c/fields/TW1_Escalation_Index__c.field-meta.xml
<CustomField>
    <fullName>TW1_Escalation_Index__c</fullName>
    <label>Escalation Index</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IGPM</fullName>
            </value>
            <value>
                <fullName>IPCA</fullName>
            </value>
            <value>
                <fullName>INPC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>