force-app/main/default/objects/TW1_Step__c/fields/TW1_Estimated_date_completion_of_demand__c.field-meta.xml
<CustomField>
    <fullName>TW1_Estimated_date_completion_of_demand__c</fullName>
    <label>Estimated date for completion of demand</label>
    <type>Date</type>
</CustomField>