force-app/main/default/objects/TW1_Step__c/fields/TW1_Fantasy_Name__c.field-meta.xml
<CustomField>
    <fullName>TW1_Fantasy_Name__c</fullName>
    <formula>TW1_Vendor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fantasy Name</label>
    <type>Text</type>
</CustomField>