force-app/main/default/objects/TW1_Step__c/fields/TW1_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>TW1_GL_Account__c</fullName>
    <label>GL Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>