force-app/main/default/objects/TW1_Step__c/fields/TW1_Homologation_Process_Status__c.field-meta.xml
<CustomField>
    <fullName>TW1_Homologation_Process_Status__c</fullName>
    <label>Homologation Process Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Approved</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Approved with Red Flag</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>