force-app/main/default/objects/TW1_Step__c/fields/TW1_Implementer__c.field-meta.xml
<CustomField>
    <fullName>TW1_Implementer__c</fullName>
    <label>Implementer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Modec</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>