force-app/main/default/objects/TW1_Step__c/fields/TW1_Inspection_Date_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>TW1_Inspection_Date_Confirmation__c</fullName>
    <label>Inspection Date Confirmation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirm</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Reschedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>