force-app/main/default/objects/TW1_Step__c/fields/TW1_Inspection_Date_Option_2__c.field-meta.xml
<CustomField>
    <fullName>TW1_Inspection_Date_Option_2__c</fullName>
    <label>Inspection Date Option 2</label>
    <type>Date</type>
</CustomField>