force-app/main/default/objects/TW1_Step__c/fields/TW1_Inspection_Instruction__c.field-meta.xml
<CustomField>
    <fullName>TW1_Inspection_Instruction__c</fullName>
    <label>Inspection Instruction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>