force-app/main/default/objects/TW1_Step__c/fields/TW1_Inspection_Schedule_Date_Status__c.field-meta.xml
<CustomField>
    <fullName>TW1_Inspection_Schedule_Date_Status__c</fullName>
    <label>Inspection Schedule Date Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>