force-app/main/default/objects/TW1_Step__c/fields/TW1_Inspection_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>TW1_Inspection_Scheduled_Date__c</fullName>
    <label>Inspection Scheduled Date</label>
    <type>DateTime</type>
</CustomField>