force-app/main/default/objects/TW1_Step__c/fields/TW1_Legal_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>TW1_Legal_Contract_Number__c</fullName>
    <label>Legal Contract Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>