force-app/main/default/objects/TW1_Step__c/fields/TW1_Location__c.field-meta.xml
<CustomField>
    <fullName>TW1_Location__c</fullName>
    <label>Location</label>
    <type>TextArea</type>
</CustomField>