force-app/main/default/objects/TW1_Step__c/fields/TW1_Manufacturing_Note__c.field-meta.xml
<CustomField>
    <fullName>TW1_Manufacturing_Note__c</fullName>
    <label>Maintenance and Repair Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>