force-app/main/default/objects/TW1_Step__c/fields/TW1_Month_of_Escalation_Application__c.field-meta.xml
<CustomField>
    <fullName>TW1_Month_of_Escalation_Application__c</fullName>
    <label>Month of Escalation Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JAN</fullName>
            </value>
            <value>
                <fullName>FEV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>