force-app/main/default/objects/TW1_Step__c/fields/TW1_Monthly_If_Fixed__c.field-meta.xml
<CustomField>
    <fullName>TW1_Monthly_If_Fixed__c</fullName>
    <label>Monthly (If Fixed)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>