force-app/main/default/objects/TW1_Step__c/fields/TW1_NC_description__c.field-meta.xml
<CustomField>
    <fullName>TW1_NC_description__c</fullName>
    <label>NC description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>