force-app/main/default/objects/TW1_Step__c/fields/TW1_NC_severity__c.field-meta.xml
<CustomField>
    <fullName>TW1_NC_severity__c</fullName>
    <label>NC severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>