force-app/main/default/objects/TW1_Step__c/fields/TW1_New_Beginning_Date__c.field-meta.xml
<CustomField>
    <fullName>TW1_New_Beginning_Date__c</fullName>
    <label>New Beginning Date</label>
    <type>DateTime</type>
</CustomField>