force-app/main/default/objects/TW1_Step__c/fields/TW1_New_End_Date__c.field-meta.xml
<CustomField>
    <fullName>TW1_New_End_Date__c</fullName>
    <label>New End Date</label>
    <type>DateTime</type>
</CustomField>