force-app/main/default/objects/TW1_Step__c/fields/TW1_Nome_da_Empresa_Terceirizada__c.field-meta.xml
<CustomField>
    <fullName>TW1_Nome_da_Empresa_Terceirizada__c</fullName>
    <label>Nome da Empresa Terceirizada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>