force-app/main/default/objects/TW1_Step__c/fields/TW1_Nome_do_Prof_de_Seguran_a_Resp__c.field-meta.xml
<CustomField>
    <fullName>TW1_Nome_do_Prof_de_Seguran_a_Resp__c</fullName>
    <label>Nome do Prof de Segurança Resp.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>