force-app/main/default/objects/TW1_Step__c/fields/TW1_Objective_evidence__c.field-meta.xml
<CustomField>
    <fullName>TW1_Objective_evidence__c</fullName>
    <label>Objective evidence</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>