force-app/main/default/objects/TW1_Step__c/fields/TW1_Observation__c.field-meta.xml
<CustomField>
    <fullName>TW1_Observation__c</fullName>
    <label>Observation</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>