force-app/main/default/objects/TW1_Step__c/fields/TW1_Percentage_of_Increase__c.field-meta.xml
<CustomField>
    <fullName>TW1_Percentage_of_Increase__c</fullName>
    <formula>(TW1_Current_Contract_Value__c / (TW1_Current_Contract_Value__c +   TW1_Previous_Contract_Amount__c )*100)/100


/*(TW1_Current_Contract_Value__c / (TW1_Current_Contract_Value__c +  TW1_Total_Contract_Amount_Amendments__c)*100)/100*/</formula>
    <label>Percentage of Increase</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>