force-app/main/default/objects/TW1_Step__c/fields/TW1_PO__c.field-meta.xml
<CustomField>
    <fullName>TW1_PO__c</fullName>
    <formula>TW1_Request__r.TW1_PO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO (Packing List)</label>
    <type>Text</type>
</CustomField>