force-app/main/default/objects/TW1_Step__c/fields/TW1_Possui_Profissional_de_Seg_Pr_prio__c.field-meta.xml
<CustomField>
    <fullName>TW1_Possui_Profissional_de_Seg_Pr_prio__c</fullName>
    <label>Possui Profissional de Seg Próprio?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>