force-app/main/default/objects/TW1_Step__c/fields/TW1_Previous_Contract_Amount__c.field-meta.xml
<CustomField>
    <fullName>TW1_Previous_Contract_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Previous Contract Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>