force-app/main/default/objects/TW1_Step__c/fields/TW1_Priority__c.field-meta.xml
<CustomField>
    <fullName>TW1_Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Priority 0 = to move forward to attend immediately or ASAP, to inspect in maximum 3 days time.</fullName>
            </value>
            <value>
                <fullName>Priority 1 = follow fabrication planned date.</fullName>
            </value>
            <value>
                <fullName>Priority 2 or No comment = Can postpone up to 1 week.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>