force-app/main/default/objects/TW1_Step__c/fields/TW1_QueueIdOld__c.field-meta.xml
<CustomField>
    <fullName>TW1_QueueIdOld__c</fullName>
    <label>QueueIdOld</label>
    <length>18</length>
    <type>Text</type>
</CustomField>