force-app/main/default/objects/TW1_Step__c/fields/TW1_Request__c.field-meta.xml
<CustomField>
    <fullName>TW1_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request</label>
    <referenceTo>TW1_Request__c</referenceTo>
    <relationshipLabel>Steps</relationshipLabel>
    <relationshipName>Steps</relationshipName>
    <type>Lookup</type>
</CustomField>