force-app/main/default/objects/TW1_Step__c/fields/TW1_Responsible_for_the_Demand__c.field-meta.xml
<CustomField>
    <fullName>TW1_Responsible_for_the_Demand__c</fullName>
    <label>Responsible for the Demand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>