force-app/main/default/objects/TW1_Step__c/fields/TW1_SAP_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>TW1_SAP_Contract_Number__c</fullName>
    <label>SAP Contract Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>