force-app/main/default/objects/TW1_Step__c/fields/TW1_Scheduled_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>TW1_Scheduled_Delivery_Date__c</fullName>
    <label>Scheduled Delivery Date</label>
    <type>Date</type>
</CustomField>