force-app/main/default/objects/TW1_Step__c/fields/TW1_SED_BM_Value__c.field-meta.xml
<CustomField>
    <fullName>TW1_SED_BM_Value__c</fullName>
    <formula>TEXT(TW1_Request__r.TW1_BM_Value_Rollup__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SED - BM Value</label>
    <type>Text</type>
</CustomField>