force-app/main/default/objects/TW1_Step__c/fields/TW1_SED_CNPJ__c.field-meta.xml
<CustomField>
    <fullName>TW1_SED_CNPJ__c</fullName>
    <formula>TW1_Request__r.TW1_Vendor__r.TW1_CNPJ__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SED - CNPJ</label>
    <type>Text</type>
</CustomField>