force-app/main/default/objects/TW1_Step__c/fields/TW1_SED_NF_Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>TW1_SED_NF_Invoice_Status__c</fullName>
    <formula>(TEXT(TW1_Request__r.TW1_NF_Invoice_Status__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SED - NF/Invoice Status</label>
    <type>Text</type>
</CustomField>