force-app/main/default/objects/TW1_Step__c/fields/TW1_SED_NF_Number__c.field-meta.xml
<CustomField>
    <fullName>TW1_SED_NF_Number__c</fullName>
    <formula>TW1_Request__r.TW1_NF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SED - NF Number</label>
    <type>Text</type>
</CustomField>