force-app/main/default/objects/TW1_Step__c/fields/TW1_Send_to_Finance__c.field-meta.xml
<CustomField>
    <fullName>TW1_Send_to_Finance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to Finance</label>
    <type>Checkbox</type>
</CustomField>