force-app/main/default/objects/TW1_Step__c/fields/TW1_Solution__c.field-meta.xml
<CustomField>
    <fullName>TW1_Solution__c</fullName>
    <label>Solution</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>