force-app/main/default/objects/TW1_Step__c/fields/TW1_Status_Action_Plain__c.field-meta.xml
<CustomField>
    <fullName>TW1_Status_Action_Plain__c</fullName>
    <label>Status Action Plain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Get Clarification</fullName>
            </value>
            <value>
                <fullName>successfully concluded</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Filled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>