force-app/main/default/objects/TW1_Step__c/fields/TW1_Subject__c.field-meta.xml
<CustomField>
    <fullName>TW1_Subject__c</fullName>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>