force-app/main/default/objects/TW1_Step__c/fields/TW1_Supplier_Response__c.field-meta.xml
<CustomField>
    <fullName>TW1_Supplier_Response__c</fullName>
    <label>Supplier Response</label>
    <type>TextArea</type>
</CustomField>