force-app/main/default/objects/TW1_Step__c/fields/TW1_Supply_Contract_Manager__c.field-meta.xml
<CustomField>
    <fullName>TW1_Supply_Contract_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supply Contract Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Steps</relationshipName>
    <type>Lookup</type>
</CustomField>