force-app/main/default/objects/TW1_Step__c/fields/TW1_Telefone__c.field-meta.xml
<CustomField>
    <fullName>TW1_Telefone__c</fullName>
    <label>Telefone</label>
    <type>Phone</type>
</CustomField>