force-app/main/default/objects/TW1_Step__c/fields/TW1_Total_Contract_Amount_Amendments__c.field-meta.xml
<CustomField>
    <fullName>TW1_Total_Contract_Amount_Amendments__c</fullName>
    <label>Total Contract Amount + Amendments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>