force-app/main/default/objects/TW1_Step__c/fields/TW1_Treatment_action__c.field-meta.xml
<CustomField>
    <fullName>TW1_Treatment_action__c</fullName>
    <label>Treatment action</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>