force-app/main/default/objects/TW1_Step__c/fields/TW1_Unit__c.field-meta.xml
<CustomField>
    <fullName>TW1_Unit__c</fullName>
    <formula>TW1_Request__r.TW1_Facility__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit</label>
    <type>Text</type>
</CustomField>