force-app/main/default/objects/TW1_Step__c/fields/TW1_Vendor_SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>TW1_Vendor_SAP_Code__c</fullName>
    <formula>TW1_Vendor__r.TW1_SAP_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier SAP Code</label>
    <type>Text</type>
</CustomField>