force-app/main/default/objects/TW1_Step__c/fields/TW1_VV_team_action_ended__c.field-meta.xml
<CustomField>
    <fullName>TW1_VV_team_action_ended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VV team action ended</label>
    <type>Checkbox</type>
</CustomField>