force-app/main/default/objects/TW1_Step__c/fields/TW1_VV_Team_Comment__c.field-meta.xml
<CustomField>
    <fullName>TW1_VV_Team_Comment__c</fullName>
    <label>VV Team Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>