force-app/main/default/objects/TW1_Step__c/fields/TW1_VV_Team_User__c.field-meta.xml
<CustomField>
    <fullName>TW1_VV_Team_User__c</fullName>
    <formula>TW1_Request__r.TW1_Approver_Docs_Validation_VV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VV Team User</label>
    <type>Text</type>
</CustomField>