force-app/main/default/objects/TW1_Step__c/fields/TW1_VVW_Doc_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>TW1_VVW_Doc_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VVW Doc Uploaded</label>
    <type>Checkbox</type>
</CustomField>