force-app/main/default/objects/TW1_Step__c/fields/TW4_Action_Plan_Instruction__c.field-meta.xml
<CustomField>
    <fullName>TW4_Action_Plan_Instruction__c</fullName>
    <label>Action Plan Instruction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Please fill in each nonconformity related to this Interaction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>