force-app/main/default/objects/TW1_Step__c/fields/TW4_Auditors__c.field-meta.xml
<CustomField>
    <fullName>TW4_Auditors__c</fullName>
    <label>Auditors</label>
    <type>TextArea</type>
</CustomField>