force-app/main/default/objects/TW1_Step__c/fields/TW4_Days_to_Send_Evidence__c.field-meta.xml
<CustomField>
    <fullName>TW4_Days_to_Send_Evidence__c</fullName>
    <formula>TW4_Evidences_Deadline__c - TODAY()</formula>
    <label>Days to Send Evidence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>