force-app/main/default/objects/TW1_Step__c/fields/TW4_Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>TW4_Delivery_Status__c</fullName>
    <formula>IF(
				  DATEVALUE(TW1_Conclusion_Date__c) &lt;= TW4_Evidences_Deadline__c, &quot;Success&quot;,
				IF(
								TW4_Evidences_Deadline__c &gt; TODAY(), &quot;In Progress&quot;, &quot;Delayed&quot;
								)
				)</formula>
    <label>Delivery Status</label>
    <type>Text</type>
</CustomField>