force-app/main/default/objects/TW1_Step__c/fields/TW4_Did_you_attach_all_evidencess__c.field-meta.xml
<CustomField>
    <fullName>TW4_Did_you_attach_all_evidencess__c</fullName>
    <label>Did you attach all evidences?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>