force-app/main/default/objects/TW1_Step__c/fields/TW4_Evidences_Deadline__c.field-meta.xml
<CustomField>
    <fullName>TW4_Evidences_Deadline__c</fullName>
    <formula>IF(
				   ISPICKVAL(TW4_Nonconformity_Criticism__c, &quot;High&quot;), ( DATETIMEVALUE(CreatedDate)  + 30),
				IF(
								ISPICKVAL(TW4_Nonconformity_Criticism__c, &quot;Moderate&quot;), (DATETIMEVALUE(CreatedDate) + 60),
								(DATETIMEVALUE(CreatedDate) + 90)
								)
				)</formula>
    <label>Evidences&apos; Deadline</label>
    <type>Date</type>
</CustomField>