force-app/main/default/objects/TW1_Step__c/fields/TW4_Evidences_Deadline_Month__c.field-meta.xml
<CustomField>
    <fullName>TW4_Evidences_Deadline_Month__c</fullName>
    <formula>TW4_Evidences_Deadline__c</formula>
    <label>Evidences&apos; Deadline Month</label>
    <type>Date</type>
</CustomField>