force-app/main/default/objects/TW1_Step__c/fields/TW4_Evidences_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>TW4_Evidences_Rejection_Reason__c</fullName>
    <label>Evaluation Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>