force-app/main/default/objects/TW1_Step__c/fields/TW4_FlowScheduleAuditCloseStep__c.field-meta.xml
<CustomField>
    <fullName>TW4_FlowScheduleAuditCloseStep__c</fullName>
    <formula>OR(
				AND(
								(Today()- DATEVALUE(CreatedDate)) &gt; 30,
								ISPICKVAL(TW4_Nonconformity_Criticism__c, &quot;High&quot;),
								ISPICKVAL(TW1_Status__c, &apos;Opened&apos;)
				),
AND(
								(Today()- DATEVALUE(CreatedDate)) &gt; 60,
								ISPICKVAL(TW4_Nonconformity_Criticism__c, &quot;Moderate&quot;),
								ISPICKVAL(TW1_Status__c, &apos;Opened&apos;)
),
				AND(
								(Today()- DATEVALUE(CreatedDate)) &gt; 90,
								OR(
								ISPICKVAL(TW4_Nonconformity_Criticism__c, &quot;Low&quot;),
												ISPICKVAL(TW4_Nonconformity_Criticism__c, &quot;Observation&quot;)
												),
								ISPICKVAL(TW1_Status__c, &apos;Opened&apos;)
)
				)</formula>
    <label>FlowScheduleAuditCloseStep</label>
    <type>Checkbox</type>
</CustomField>