force-app/main/default/objects/TW1_Step__c/fields/TW4_IDNonconformity__c.field-meta.xml
<CustomField>
    <fullName>TW4_IDNonconformity__c</fullName>
    <label>IDNonconformity</label>
    <length>18</length>
    <type>Text</type>
</CustomField>