force-app/main/default/objects/TW1_Step__c/fields/TW4_Nonconformity__c.field-meta.xml
<CustomField>
    <fullName>TW4_Nonconformity__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, 
FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) +  TW4_IDNonconformity__c ,  TW4_NonconformityName__c, &apos;_self&apos;)</formula>
    <label>Nonconformity</label>
    <type>Text</type>
</CustomField>