force-app/main/default/objects/TW1_Step__c/fields/TW4_Nonconformity_Criticism__c.field-meta.xml
<CustomField>
    <fullName>TW4_Nonconformity_Criticism__c</fullName>
    <label>Nonconformity Criticism</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Observation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>