force-app/main/default/objects/TW1_Step__c/fields/TW4_NonconformityName__c.field-meta.xml
<CustomField>
    <fullName>TW4_NonconformityName__c</fullName>
    <label>NonconformityName</label>
    <length>18</length>
    <type>Text</type>
</CustomField>