force-app/main/default/objects/TW1_Step__c/fields/TW4_RecordTypeAnalyseEvid__c.field-meta.xml
<CustomField>
    <fullName>TW4_RecordTypeAnalyseEvid__c</fullName>
    <formula>CASESAFEID(RecordTypeId) =  $Setup.IDStep__c.Id_RecordType_Evidence_Analysis__c</formula>
    <label>RecordTypeAnalyseEvid?</label>
    <type>Checkbox</type>
</CustomField>