force-app/main/default/objects/TW1_Step__c/fields/TW4_RecordTypeNonConfEvid__c.field-meta.xml
<CustomField>
    <fullName>TW4_RecordTypeNonConfEvid__c</fullName>
    <formula>CASESAFEID(RecordTypeId) =  $Setup.IDStep__c.Id_RecordType_Nonconformity_Evidence__c</formula>
    <label>RecordTypeNonConfEvid?</label>
    <type>Checkbox</type>
</CustomField>