force-app/main/default/objects/TW1_Step__c/fields/TW4_Reschedule_Comments__c.field-meta.xml
<CustomField>
    <fullName>TW4_Reschedule_Comments__c</fullName>
    <label>Reschedule Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>