force-app/main/default/objects/TW1_Step__c/fields/TW4_Scope_Audit__c.field-meta.xml
<CustomField>
    <fullName>TW4_Scope_Audit__c</fullName>
    <label>Scope Audit</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>