force-app/main/default/objects/TW1_Step__c/fields/TW5_Documentation_Attached__c.field-meta.xml
<CustomField>
    <fullName>TW5_Documentation_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documentation Attached?</label>
    <type>Checkbox</type>
</CustomField>