force-app/main/default/objects/TW1_Step__c/fields/TW5_IDItem__c.field-meta.xml
<CustomField>
    <fullName>TW5_IDItem__c</fullName>
    <label>IDItem</label>
    <length>18</length>
    <type>Text</type>
</CustomField>