force-app/main/default/objects/TW1_Step__c/fields/TW5_Invoice__c.field-meta.xml
<CustomField>
    <fullName>TW5_Invoice__c</fullName>
    <label>Invoice</label>
    <length>22</length>
    <type>Text</type>
</CustomField>