force-app/main/default/objects/TW1_Step__c/fields/TW5_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>TW5_Item_Name__c</fullName>
    <label>Item Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>